Bug 258052 - Switching between activities does not work and configuration is corrupted
Summary: Switching between activities does not work and configuration is corrupted
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: activities (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Chani
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-27 11:06 UTC by Luca Beltrame
Modified: 2010-11-27 12:39 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luca Beltrame 2010-11-27 11:06:35 UTC
Version:           unspecified (using Devel) 
OS:                Linux

Using a post-Beta 1 snapshot (4.5.81) it is no longer possible to switch activities. Or to be more precise, activities are switched (differently-associated windows stay on the respective activity) but the Plasma widget layouts, wallpapers, and so on aren't. Also, switching among activities and doing any activity with them such as stopping or renaming permanently erases the previous (but not visible) configuration.
In some cases (which I can't reproduce reliably yet), Plasma will also crash after switching.
In short:
1. Windows keep their association among activities
2. Plasma layouts and widgets aren't switched - they remain the ones on the activity selected at login
3. If an activity is manipulated with the "wrong" layout, the previous configuration is lost.

Also, creating a new activity overwrites the current one being used.

Reproducible: Always

Steps to Reproduce:
1. Start a Plasma session with one than more activity
2. Switch to a new activity using either the activity bar or the activity controller


Actual Results:  
The widget layouts and wallpaper do not change.

Expected Results:  
A change to the correct layouts and wallpaper as defined in the configuration file.

Packages: openSUSE 11.3, KDE:Unstable:SC snapshots (4.5.81, post-Beta1).
Observed this effect on two different machines.
Comment 1 Ivan Čukić 2010-11-27 12:39:28 UTC
SVN commit 1201329 by ivan:

As per previous Aaron's patch, non-PVD shouldn't think desktop == 0 anywhere

it may produce some transitioning problems but it will return plasma-desktop on the right path :)

BUG:258052



 M  +0 -6      activity.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1201329