As per previous Aaron's patch, non-PVD shouldn't think desktop == 0 anywhere

it may produce some transitioning problems but it will return plasma-desktop on the right path :)

BUG:258052


svn path=/trunk/KDE/kdebase/workspace/; revision=1201329